--- a/www/css/style.css
+++ b/www/css/style.css
@@ -422,11 +422,12 @@ input[type="range"]::-webkit-slider-thumb:before {
 }
 .infoOverlay {
   position: fixed;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   z-index: 80;
   background-color: rgba(0,0,0,0.5);
-  /*font-weight: bold;*/
   text-transform: uppercase;
   font-family: monospace;
   font-size: 24px;
@@ -434,13 +435,14 @@ input[type="range"]::-webkit-slider-thumb:before {
   text-shadow: 0 0 28px gray;
 }
 .infoOverlayInner {
-  width: 480px;
-  margin: 0 auto;
+  width: 0px;
+  left: 50%;
   height: 100%;
   position: relative;
 }
 .infoOverlay .buttonContainer {
   position: fixed;
+  left: 0px;
   top: 400px;
   width: 100%;
 }
@@ -452,29 +454,30 @@ input[type="range"]::-webkit-slider-thumb:before {
   padding-left: 34px;
   line-height: inherit;
   box-shadow: 0 0 28px gray;
+  z-index: 99;
 }
 #infoArrowLeft {
   position: absolute;
   top: 221px;
-  left: 115px;
+  left: -125px;
   width: 31px;
 }
 #infoArrowBottle {
   position: absolute;
   top: 242px;
-  left: 226px;
+  left: -14px;
   width: 31px;
 }
 #infoArrowRight {
   position: absolute;
   top: 221px;
-  left: 342px;
+  left: 102px;
   width: 31px;
 }
 #infoTextLeft {
   position: absolute;
   top: 317px;
-  left: 88px;
+  left: -152px;
   font-size: 24px;
   width: 78px;
   text-align: center;
@@ -482,7 +485,7 @@ input[type="range"]::-webkit-slider-thumb:before {
 #infoTextBottle {
   position: absolute;
   top: 334px;
-  left: 206px;
+  left: -34px;
   font-size: 24px;
   width: 80px;
   text-align: center;
@@ -490,7 +493,7 @@ input[type="range"]::-webkit-slider-thumb:before {
 #infoTextRight {
   position: absolute;
   top: 317px;
-  left: 325px;
+  left: 85px;
   width: 78px;
   text-align: center;
 }
@@ -498,5 +501,5 @@ input[type="range"]::-webkit-slider-thumb:before {
   position: absolute;
   width: 300px;
   top: 130px;
-  left: 89px;
+  left: -151px;
 }
