Two chart types.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -504,3 +504,8 @@ input[type="range"]::-webkit-slider-thumb:before {
   top: 130px;
   left: -151px;
 }
+
+canvas{
+  width: 100% !important;
+  height: auto !important;
+}
