--- a/www/css/charts.css
+++ b/www/css/charts.css
@@ -16,6 +16,24 @@
   color: #FCC108;
 }
 
-.Charts .leftColor   { color: rgba(220,130,130,1);}
-.Charts .rightColor  { color: rgba(130,220,130,1);}
-.Charts .bottleColor { color: rgba(130,130,220,1);}
+.Charts .leftColor   { font-weight: bold; color: rgba(252,193,8,1);}
+.Charts .rightColor  { font-weight: bold; color: rgba(6,224,198,1);}
+.Charts .bottleColor { font-weight: bold; color: rgba(255,255,255,1);}
+
+.Charts .percentageContent {}
+.percentageHead { text-transform: uppercase; margin-top: 24px; margin-bottom: 8px}
+.percentageContent .tag {display: inline-block; width: 50px; margin: 4px 10px; color: #666;}
+.percentageContent .tag .leftColor, .percentageContent .tag .bottleColor, .percentageContent .tag .rightColor {
+  display: block;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: black;
+  font-weight: normal;
+  font-size: 22px;
+}
+.percentageContent .tag .leftColor   { background-color: rgba(252,193,8,1);}
+.percentageContent .tag .rightColor  { background-color: rgba(6,224,198,1);}
+.percentageContent .tag .bottleColor { background-color: rgba(255,255,255,1);}
