--- a/www/css/charts.css
+++ b/www/css/charts.css
@@ -14,26 +14,29 @@
 
 .Charts strong {
   color: #FCC108;
+  font-size: 16px;
 }
 
 .Charts .leftColor   { font-weight: bold; color: rgba(252,193,8,1);}
 .Charts .rightColor  { font-weight: bold; color: rgba(6,224,198,1);}
 .Charts .bottleColor { font-weight: bold; color: rgba(255,255,255,1);}
 
-.Charts .percentageContent {}
-.percentageHead { text-transform: uppercase; margin-top: 24px; margin-bottom: 8px}
-.percentageContent .tag {display: inline-block; width: 50px; margin: 4px 10px; color: #666;}
-.percentageContent .tag .leftColor, .percentageContent .tag .bottleColor, .percentageContent .tag .rightColor {
+.Charts .chartDescContent {}
+.chartDescHead { text-transform: uppercase; margin-top: 24px; margin-bottom: 8px}
+.chartDescContent .chartDescText { color: #999; margin-bottom: 10px;}
+.chartDescContent .tag {display: inline-block; width: 50px; margin: 4px 10px; color: #999;}
+.chartDescContent .tag .leftColor, .chartDescContent .tag .bottleColor, .chartDescContent .tag .rightColor {
   display: block;
   border-radius: 50%;
+  border: 2px solid;
   width: 50px;
   height: 50px;
-  line-height: 50px;
+  line-height: 46px;
   text-align: center;
-  color: black;
+  color: white;
   font-weight: normal;
   font-size: 22px;
 }
-.percentageContent .tag .leftColor   { background-color: rgba(252,193,8,1);}
-.percentageContent .tag .rightColor  { background-color: rgba(6,224,198,1);}
-.percentageContent .tag .bottleColor { background-color: rgba(255,255,255,1);}
+.chartDescContent .tag .leftColor   { border-color: rgba(252,193,8,1);}
+.chartDescContent .tag .rightColor  { border-color: rgba(6,224,198,1);}
+.chartDescContent .tag .bottleColor { border-color: rgba(255,255,255,1);}
