--- a/www/css/charts.css
+++ b/www/css/charts.css
@@ -21,9 +21,9 @@
 .Charts .rightColor  { font-weight: bold; color: rgba(6,224,198,1);}
 .Charts .bottleColor { font-weight: bold; color: rgba(255,255,255,1);}
 
-.Charts .chartDescContent {}
+.Charts .chartDescText { color: #999;}
 .chartDescHead { text-transform: uppercase; margin-top: 24px; margin-bottom: 8px}
-.chartDescContent .chartDescText { color: #999; margin-bottom: 10px;}
+.chartDescContent .chartDescText { margin-bottom: 10px;}
 .chartDescContent .tag {display: inline-block; width: 50px; margin: 4px 10px; color: #999;}
 .chartDescContent .tag .leftColor, .chartDescContent .tag .bottleColor, .chartDescContent .tag .rightColor {
   display: block;
