--- a/www/css/style.css
+++ b/www/css/style.css
@@ -508,3 +508,7 @@ input[type="range"]::-webkit-slider-thumb:before {
   top: 130px;
   left: -151px;
 }
+
+.view {
+  background-color: #242730;
+}
