Nicer error page for browser support

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -35,7 +35,7 @@ body {
   background-image: url('../images/menu-backdrop.png');
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Roboto Slab', serif;
 }
 
