--- a/www/css/style.css
+++ b/www/css/style.css
@@ -179,7 +179,12 @@ h1, h2, h3, h4 { color: #fff;}
   height: 20px;
   width: 100%;
   z-index: 2;
-  margin-top: -3px;
+  margin-top: -8px;
+}
+
+.spinner {
+  stroke: #06E0C6;
+  fill: #06E0C6;
 }
 
 .time {
