--- a/www/css/style.css
+++ b/www/css/style.css
@@ -195,7 +195,7 @@ h1, h2, h3, h4 { color: #fff;}
 .day {
   text-align: center;
 	margin: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 7px;
   text-transform: uppercase;
 }
 
@@ -230,7 +230,7 @@ h1, h2, h3, h4 { color: #fff;}
   line-height: 10px;
 }
 .timeSinceLast p { color: #999 ;}
-.timeSinceLast { height: 68px; text-align: center; }
+.timeSinceLast { text-align: center; }
 .timeSinceLast .verticalLine {
   margin-top: 10px;
 }
@@ -516,11 +516,28 @@ input[type="range"]::-webkit-slider-thumb:before {
 
 .totals {
   height: 24px;
+  color: #666;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
-.totals .left   {  position: absolute; top 0px; left: 0;}
-.totals .bottle {  position: absolute; top 0px; width: 100%; text-align: center; }
-.totals .right  {  position: absolute; top 0px; right: 0;}
+.totals .left   { position: relative; display: inline; color: #666; }
+.totals .bottle { position: relative; display: inline; color: #666; }
+.totals .right  { position: relative; display: inline; color: #666; }
+.totals .supplierB .ion-waterdrop { background-color: transparent;}
+
+.totals .supplier { 
+    height: 16px;
+    width: 16px;
+    line-height: 16px;
+    font-size: 8px;
+    left: 0;
+    top: -2px;
+    background-color: #666;
+    position: relative;
+    margin-right: 2px;
+    margin-left: 5px;
+}
 
 
 .view {
